Support customized database port

--- a/credentials.R.template
+++ b/credentials.R.template
@@ -2,3 +2,4 @@ credentials.host <- "ENTER DATABASE IP OR DOMAINNAME"
 credentials.user <- "ENTER DATABASE USER"
 credentials.password <- "ENTER DATABASE PASSWORD"
 credentials.db <- "ENTER DATABASE NAME"
+credentials.port <- "ENTER DATABASE PORT"
