fixed json path

--- a/credentials.R.template
+++ b/credentials.R.template
@@ -3,4 +3,4 @@ credentials.user <- "ENTER DATABASE USER"
 credentials.password <- "ENTER DATABASE PASSWORD"
 credentials.db <- "ENTER DATABASE NAME"
 credentials.port <- ENTER DATABASE PORT
-
+credentials.language <- "ENTER LANGUAGE CODE" 
